// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Snapshot Tests Multiple texts render properly 1`] = `
<Text
  accessibilityLabel="redibs-ucl.text"
  style={
    Array [
      Object {
        "fontFamily": "Mulish-Bold",
        "fontSize": 16,
        "fontWeight": "bold",
        "lineHeight": 20,
      },
      Object {
        "color": "#121212",
        "textAlign": undefined,
        "textDecorationLine": undefined,
      },
    ]
  }
  testID="redibs-ucl.text"
>
  <Text
    accessibilityLabel="redibs-ucl.text"
    style={
      Array [
        Object {
          "fontFamily": "Mulish-Bold",
          "fontSize": 16,
          "fontWeight": "bold",
          "lineHeight": 20,
        },
        Object {
          "color": "#121212",
          "textAlign": undefined,
          "textDecorationLine": undefined,
        },
      ]
    }
    testID="redibs-ucl.text"
  >
    First text
  </Text>
  <Text
    accessibilityLabel="redibs-ucl.text"
    style={
      Array [
        Object {
          "fontFamily": "Mulish-Bold",
          "fontSize": 14,
          "fontWeight": "bold",
          "lineHeight": 16,
        },
        Object {
          "color": "#8A8A8A",
          "textAlign": undefined,
          "textDecorationLine": undefined,
        },
      ]
    }
    testID="redibs-ucl.text"
  >
    Second text
  </Text>
  <Text
    accessibilityLabel="redibs-ucl.text"
    style={
      Array [
        Object {
          "fontFamily": "Mulish-Bold",
          "fontSize": 12,
          "fontWeight": "bold",
          "lineHeight": 14,
        },
        Object {
          "color": "#E05666",
          "textAlign": undefined,
          "textDecorationLine": undefined,
        },
      ]
    }
    testID="redibs-ucl.text"
  >
    Third text
  </Text>
</Text>
`;

exports[`Text Snapshot Tests Primary large button renders properly 1`] = `
<Text
  accessibilityLabel="redibs-ucl.text"
  style={
    Array [
      Object {
        "fontFamily": "Mulish-Bold",
        "fontSize": 16,
        "fontWeight": "bold",
        "lineHeight": 20,
      },
      Object {
        "color": "#121212",
        "textAlign": undefined,
        "textDecorationLine": undefined,
      },
    ]
  }
  testID="redibs-ucl.text"
>
  Default text
</Text>
`;

exports[`Text Snapshot Tests Secondary large button renders properly 1`] = `
<Text
  accessibilityLabel="redibs-ucl.text"
  onPress={[MockFunction]}
  style={
    Array [
      Object {
        "fontFamily": "Mulish-Bold",
        "fontSize": 14,
        "fontWeight": "bold",
        "lineHeight": 16,
      },
      Object {
        "color": "#8A8A8A",
        "textAlign": "center",
        "textDecorationLine": undefined,
      },
    ]
  }
  testID="redibs-ucl.text"
>
  Second text
</Text>
`;

exports[`Text Snapshot Tests Tertiary large button renders properly 1`] = `
<Text
  accessibilityLabel="redibs-ucl.text"
  onPress={[MockFunction]}
  style={
    Array [
      Object {
        "fontFamily": "Mulish-Bold",
        "fontSize": 28,
        "fontWeight": "900",
        "lineHeight": 32,
      },
      Object {
        "color": "#121212",
        "textAlign": "center",
        "textDecorationLine": undefined,
      },
    ]
  }
  testID="redibs-ucl.text"
>
  First text
</Text>
`;

exports[`Text Snapshot Tests Tertiary text renders properly 1`] = `
<Text
  accessibilityLabel="redibs-ucl.text"
  style={
    Array [
      Object {
        "fontFamily": "Mulish-Bold",
        "fontSize": 12,
        "fontWeight": "bold",
        "lineHeight": 14,
      },
      Object {
        "color": "#E05666",
        "textAlign": "left",
        "textDecorationLine": undefined,
      },
    ]
  }
  testID="redibs-ucl.text"
>
  Second text
</Text>
`;
